--- a/x.toml
+++ b/x.toml
@@ -1,6 +1,6 @@
 [grcov.installer]
 version = "0.8.2"
-
+lei
 [system-tests]
 smoke-test = { path = "smoke-test" }
 testcases = { path = "testsuite/testcases" }
